@@ -832,9 +832,9 @@ int		Tcl_IsShared _ANSI_ARGS_((Tcl_Obj *objPtr));
      */
 #   define Tcl_DecrRefCount(objPtr) \
 	do { \
-	    Tcl_Obj *obj = (objPtr); \
-	    if ((obj)->refCount-- < 2) { \
-		TclFreeObj(obj); \
+	    Tcl_Obj *_objPtr = (objPtr); \
+	    if (_objPtr->refCount-- < 2) { \
+		TclFreeObj(_objPtr); \
 	    } \
 	} while(0)
 #   define Tcl_IsShared(objPtr) \
